# bestemmissimo

./: .envrc  .flake8  .gitignore  Procfile  __main__.py  blasphemy.py  pyproject.toml
bestemmissimo/: __main__.py
bestemmissimo/cli/: server.py
bestemmissimo/core/: blasphemy.py  utils.py
bestemmissimo/discord/: __init__.py
bestemmissimo/telegram/: __init__.py
